--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -28,7 +28,7 @@
     text-align: center;
     font-weight: bold;
     font-size: 50px;
-    text-shadow: 1px 1px 1px black;
+    text-shadow: 2px 1px 1px black;
     border-radius: 25px;
     border: 2px solid #000000;
     background: #73AD21;
